Fixed colors of menu / buttons on IE
by [Dara Keon (desktop)] in [2013-09-28 00:51:27 (-03:00)] - hg hash {e0d0f0027942}

--- a/site/DFM.MVC/Assets/Css/Forms.css
+++ b/site/DFM.MVC/Assets/Css/Forms.css
@@ -30,6 +30,7 @@ button {
 	cursor: pointer;
 	border: none;
 
+    background: #777;
 	background: -webkit-gradient(linear, left top, left bottom, from(#999), to(#333));
 	background: -moz-linear-gradient(top,  #999,  #333);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#333333');
