--- a/site/DFM.MVC/Assets/Css/Menu.css
+++ b/site/DFM.MVC/Assets/Css/Menu.css
@@ -14,6 +14,7 @@
 	list-style: none;
 	float: left;
 
+    background: #777;
 	background: -webkit-gradient(linear, left top, left bottom, from(#999), to(#333));
 	background: -moz-linear-gradient(top,  #999,  #333);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#333333');
@@ -48,6 +49,7 @@ h2
 	list-style: none;
 	float: left;
 
+    background: #777;
 	background: -webkit-gradient(linear, left top, left bottom, from(#999), to(#333));
 	background: -moz-linear-gradient(top,  #999,  #333);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#999999', endColorstr='#333333');
